@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-16T00:43:11Z",
-  "count" : 407,
+  "timestamp" : "2022-10-29T00:28:39Z",
+  "count" : 390,
   "count_minmax" : [ 138, 407 ],
-  "count_decinc" : [ -0, +407 ],
+  "count_decinc" : [ -17, +407 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
