@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-28T16:07:03Z",
-  "count" : 261,
-  "count_minmax" : [ 139, 261 ],
-  "count_decinc" : [ -0, +261 ],
+  "timestamp" : "2022-10-29T00:28:39Z",
+  "count" : 412,
+  "count_minmax" : [ 139, 412 ],
+  "count_decinc" : [ -0, +412 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
