@@ -1,20 +1,13 @@
 {
-  "timestamp" : "2022-10-28T16:07:03Z",
-  "count_outdated" : 77573,
-  "uniques_outdated" : 1168,
-  "count" : 83152,
+  "timestamp" : "2022-10-29T00:28:39Z",
+  "count_outdated" : 77976,
+  "uniques_outdated" : 1170,
+  "count" : 83625,
   "uniques" : 1200,
   "clones" : [
     {
-      "timestamp": "2022-10-14T00:00:00Z",
-      "count": 64,
-      "count_minmax": [ 64, 403 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
-    },
-    {
       "timestamp": "2022-10-15T00:00:00Z",
-      "count": 407,
+      "count": 390,
       "count_minmax": [ 138, 407 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-10-28T00:00:00Z",
-      "count": 261,
-      "count_minmax": [ 139, 261 ],
+      "count": 412,
+      "count_minmax": [ 139, 412 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
     }
