@@ -1,15 +1,10 @@
 {
-  "count": 5579,
+  "count": 5649,
   "uniques": 4,
   "clones": [
     {
-      "timestamp": "2022-10-14T00:00:00Z",
-      "count": 64,
-      "uniques": 2
-    },
-    {
       "timestamp": "2022-10-15T00:00:00Z",
-      "count": 407,
+      "count": 390,
       "uniques": 2
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2022-10-28T00:00:00Z",
-      "count": 261,
+      "count": 412,
       "uniques": 2
     }
   ]
