@@ -1,3 +1,11 @@
+2022-10-29T00:28:39Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3349385606 # 572
+* notice: last 14d: unq all: 4 5649
+* notice: prev accum: outdated-unq outdated-all / unq all: 1168 77573 / 1200 83152
+* notice: next accum: outdated-unq outdated-all / unq all: 1170 77976 / 1200 83625
+* notice: prev exec diff / last date diff / accum: unq all: +0 +151 -0 -17 / +2 +412 -0 -0 / 2 412
+* notice: removed / changed dates: [2022-10-14] / [2022-10-15 2022-10-28]
+
 2022-10-28T16:07:03Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3346845275 # 571
 * notice: last 14d: unq all: 4 5579
